--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -39,6 +39,16 @@ To run the test we deployed an EC2 machine in the same region to minimize the ne
 The machine was a base Ubuntu instance with only Java and Apache JMeter installed.
 The tests were executed using the Apache JMeter CLI. For each of the tests we are providing a `jmx` file so you can run the same on your end.
 
+## Cost benchmark
+
+Besides covering the performance aspect of this benchmark, we also wanted to focus on the cost. A lot of people have questions and concerns when it comes to estimating costs of serverless infrastructure. To help answer those questions when it comes to Webiny, you can use the numbers from this benchmark to help you estimate your potential cost.
+
+## Scaling the performance
+
+The numbers we presented in our tests are not the maximum that Webiny can reach. Many of the serverless services are designed to scale far beyond our reported numbers. To achieve this scale, a "real life" example is needed. Users need to be accessing the API and the website from different networks and locations. Unfortunately creating such a load test is very difficult and in our test we spread the load across several IPs but that's far from enough to achieve real life production scale.
+
+If you require a greater scale, we recommend you reach out to us via [slack](https://www.webiny.com/slack) and we'll be happy to help you out.
+
 ## Replicate the test
 
-All test files, reports from our run and instructions are available in this repo here: http://github.com/webiny/benchmark.
+All test files, reports from our run and instructions are available in this repository here: http://github.com/webiny/benchmark.
