Minor text cleanup and fixes

--- a/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
@@ -35,9 +35,9 @@ As an example say your average visitors stays on your site 5 minutes, and does a
 | Test B |             1,149.83 |      34,495 |
 | Test C |             2,279.87 |      68,396 |
 | Test D |             3,949.16 |     118,474 |
-| Test D |             3,977.34 |     119,320 |
+| Test E |             3,977.34 |     119,320 |
 
-**Formula**: (Throughput\*60sec\*5min)/10 calls per user = total number of concurrent users in a 5 minute period
+**Formula**: (Throughput\*60sec\*5min)/10 calls per user = total number of concurrent users in a 5 minute period.
 
 **Note:** This is the formula for ideal conditions where user requests have an ideal spread of time between requests.
 
@@ -94,7 +94,7 @@ You can view the full content model structure and relations between different mo
 
 ### Test plan
 
-We performed 4 variations of this test. The reason is that Webiny uses Elasticsearch, which is the only non-serverless infrastructure piece that's part of the architecture. Being non-serverless means we need to manually scale it. So we decided to run 4 different test variations. In each of variations we changed the load amount and the instance type.
+We performed 5 variations of this test. The reason is that Webiny uses Elasticsearch, which is the only non-serverless infrastructure piece that's part of the architecture. Being non-serverless means we need to manually scale it. So we decided to run 5 different test variations. In each of variations we changed the load amount and the instance type.
 
 | Test   | Number of users | Ramp up time | Instance                            |                    Price per hour |
 | ------ | --------------: | :----------: | :---------------------------------- | --------------------------------: |
@@ -177,7 +177,7 @@ For additional info, check out the official [AWS guide](https://docs.aws.amazon.
 
 :::
 
-An additional thing to mention is that every write request, has 1 DynamoDB write in general as we tend to do bulk writes, but there is also at least 1 read operation that happens as well. That read operation is issued by the Webiny security module to verify if the current user, or token, has the right to perform this action.
+Additional thing to mention is that every write request has 1 DynamoDB write in general as we tend to do bulk writes, but there is also at least 1 read operation that happens as well. That read operation is issued by the Webiny security module to verify if the current user, or token, has the right to perform this action.
 
 ---
 
